fix spacing in transaction builder success

--- a/src/styles/_TransactionBuilder.scss
+++ b/src/styles/_TransactionBuilder.scss
@@ -68,6 +68,7 @@
   margin-top: 0.5em;
   margin-bottom: 1.5em;
   background: $s-color-neutral9;
+  cursor: pointer;
   word-wrap: break-word;
 }
 .TransactionBuilderResult__success {
